--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on: 
   pull_request:
     branches: [develop]
+  push:
+    branches: [develop]
 
 jobs:
   build:
@@ -13,3 +15,13 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
+      - name: build project
+        if: github.event_name == 'push'
+        run: npm run build
+      - name: deploy to staging
+        if: github.event_name == 'push'
+        run: npx surge --project ./build --doamin https://possessive-push.surge.sh/
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+          : ${{ secrets.SURGE_TOKEN }}
+
