feat: action issue

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,6 +4,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/actions/issue
+        id: issue
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: Prueba issue
+          body: foo bar
+          assignees: |
+            felipe1120gomez
+      - run: |
+          echo "Time: ${{ steps.issue.outputs.issue }}"
       - uses: ./.github/actions/hello
         id: hello
         with:
